# wg_gesucht_telegram_bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  example.env  pyproject.toml
app/: __main__.py  config.py  id_shelve.py  utils.py  wg_gesucht_crawler.py
app/crawlers/: asbtract_crawler.py  kleinanzeigen_crawler.py  wg_gesucht_crawler.py
wohnungs_bot/: asbtract_crawler.py  config.py  id_shelve.py  kleinanzeigen_crawler.py  kleinanzeigen_sel.py  soup_telegram_main.py  telegrambot_main.py  wg_gesucht_crawler.py
wohnungs_bot/crawlers/: kleinanzeigen_crawler.py  wg_gesucht_crawler.py
