[tool.poetry]
name = "wohnungs-bot"
version = "0.1.0"
description = "a bot that will send you a telegram notification when there is a new flat available on kleinanzeigen, immoscout etc."
authors = ["Jeremie Siller"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.1.0"
python-telegram-bot = {extras = ["job-queue"], version = "^20.7"}
requests = "^2.31.0"
httpx = {version = "^0.25.0", extras = ["http2"]}
beautifulsoup4 = "^4.12.3"
mechanicalsoup = "^1.3.0"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
isort = "^5.13.2"
autoflake = "^2.2.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"
black = "^23.12.1"
ipykernel = "^6.29.0"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
